[package]
name = "postcss-autoprefixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { git = "https://github.com/postcss-rs/postcss-rs" }
recursive-parser = { git = "https://github.com/postcss-rs/postcss-rs" }
regex = "1.5.4"
once_cell = "1.8.0"
